# encoderops

./: .env  .gitignore  README.md  blueprint.env  hp_search.bash  lmdb.ipynb  main.py  pyproject.toml  scratch.ipynb
analysis/: calixarene_compute.ipynb  calixarene_plots.ipynb  descriptors.py  multitask.ipynb  scratch.ipynb  scratch_calixarene.ipynb  trpcage.ipynb
analysis/calixarene/: G13_to_G2-trajs-0.2-replicas.pkl  G13_to_G2-trajs-0.2.pkl  G13_to_G2-trajs-0.5-replicas.pkl  G13_to_G2-trajs-0.5.pkl  G2-lagtime.pkl  G2-trajs-replicas.pkl  G2-trajs.pkl
datasets/: lorenz63_dataset.nc
docs/: index.html
docs/assets/stylesheets/: main_free.css
exps/ENSO/: scratch.ipynb  trainer.py
exps/calixarene/: analysis.ipynb  leonardo_cineca_launcher.bash  trainer.py
exps/lorenz63/: make_data.py  scratch.ipynb  trainer.py  trainer_DAE.py  trainer_VAMPNets.py
exps/trpcage/: analysis.ipynb  leonardo_cineca_launcher.bash  trainer.py
launchers/leo/: hp_runner.py  launch.bash  launcher.sbatch  multi.bash  multi.sbatch
launchers/local/: calix_multi.bash  hp_search.bash  launch.bash  multi.bash
notes/: dev.md
scripts/: to_lmdb.py
src/: configs.py  data.py  loss.py  model.py  modules.py  utils.py
trainers/: chignolin.py  multi_task.py  single_task.py
